# docsnap

./: .gitignore  .gitmodules  .project  DocSnap.cabal  compile.sh  docsnap.cabal  docsnap.cabal_dev  docsnap.cabal_retail  doksi.txt  run-in-terminal.sh  run.sh  site_key.txt  snippets.txt  users.json
.dist-buildwrapper/src/: .Application.hs.bwinfo  .Application.hs.bwusage  .DocSnapServer.hs.bwinfo  .DocSnapServer.hs.bwusage  .Main.hs.bwinfo  .Main.hs.bwusage  .Site.hs.bwinfo  .Site.hs.bwusage  Application.hs  Site.hs
.dist-buildwrapper/src/Internal/: .JSON.hs.bwinfo  .JSON.hs.bwusage  .NetworkPackage.hs.bwinfo  .NetworkPackage.hs.bwusage  .Types.hs.bwinfo  .Types.hs.bwusage  JSON.hs
docsnap/: site_key.txt
docsnap/log/: README
docsnap/snaplets/heist/templates/: main.tpl
docsnap/static/js/: author.js  createnewdlg.js  differences.js  docsnap.js  environment.js  popupdialog.js  staticdialog.js  sync.js  utils.js
docsnap/static/tests/: tests.html  tests.js
download/: README
snaplets/heist/templates/: _jquery.tpl  _mainframe.tpl  _new_dialog.tpl  _texteditor.tpl  _texteditor_old.tpl  base.tpl  index.tpl  main.tpl  test.tpl
src/: Application.hs  DocSnapServer.hs  DropTake.hs  Exporter.hs  Serialize.hs  Site.hs  TestDebug.hs  Tests.hs
src/DocSnap/: AccessProvider.hs  Converter.hs  Document.hs  Export.hs  Formatting.hs  Merge.hs  Repository.hs  Serialize.hs  Snaplets.hs  Splices.hs  Synchronize.hs  Utilities.hs  VersionControl.hs
src/DocSnap/Converter/Backends/: HtmlConverter.hs  TxtConverter.hs
src/DocSnap/Export/: Converter.hs
src/DocSnap/Formatting/: Converter.hs
src/DocSnap/Formatting/Converter/Backends/: HtmlConverter.hs  TxtConverter.hs
src/DocSnap/Internal/: Types.hs  Utilities.hs
src/DocSnap/Repository/: Types.hs
src/DocSnap/Snap/: Splices.hs  Utilities.hs
src/DocSnap/VersionControl/: Merge.hs
src/Exporter/: TxtExporter.hs
src/Internal/: Types.hs
static/: closurelibrarytest.html  closurelibrarytest.js  diff.js  docsnap.js  jquerytest.html  old_diff.js  screen.css  styles.css  utils.js
static/bigbuttons/: jquery-ui-1.10.2.custom.css
static/css/: styles.css
static/css/bigbuttons/: jquery-ui-1.10.2.custom.min.css
static/js/: author.js  dialog.js  diff.js  differences.js  docsnap.js  staticdialog.js  sync.js  ui.js  utils.js
static/js/author/: docsnap-author.js
static/js/common/: diff.js  docsnap.js  docsnap.js másolata  utils.js
static/js/newdlg/: script.js
static/js/reader/: docsnap-reader.js
static/js/sync/: script.js
static/tests/: seleniumext.js  tests.html  tests.js
tests/selenium/: first_testsuite  loop  testcase1  testsuite2
